link gets worked too

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     
   </div>
     <h1 class="content">
-        this is dashboard page.
+        this is dashboard page..
     </h1>
 </div>
 <div class="bottom-navigation-bar">
