--- a/front.html
+++ b/front.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
-  
-    <title>Calculator</title>
+   <title>CALCULATOR DESIGN</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -31,9 +30,7 @@
             <button onclick="appendToDisplay('.')">.</button>
             <button onclick="backspace('del.')">del</button>
             <button onclick="calculate()">=</button>
-           
-        </div>
+            </div>
     </div>
-    
-</body>
+    </body>
 </html>
